--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: QuICAnalysis
+Package: QuICSeedR
 Title: Analyze Data for Fluorophore-Assisted Seed Amplification Assays
 Date: 2024-07-11
 Version: 0.1.0
@@ -9,12 +9,12 @@ Authors@R: person(given = "Manci",
                   email = "li000021@umn.edu",
                   role = c("aut", "cre"),
                   comment = c(ORCID = "0000-0003-3930-7117"))
-Description: A toolkit for analysis and visualization of data from fluorophore-assisted seed amplification assays, such as such as Real-Time Quaking-Induced Conversion (RT-QuIC) and Fluorophore-Assisted Protein Misfolding Cyclic Amplification (PMCA). 'QuICAnalysis' addresses limitations in existing software by automating data processing, supporting large-scale analysis, and enabling comparative studies of analysis methods.
+Description: A toolkit for analysis and visualization of data from fluorophore-assisted seed amplification assays, such as such as Real-Time Quaking-Induced Conversion (RT-QuIC) and Fluorophore-Assisted Protein Misfolding Cyclic Amplification (PMCA). 'QuICSeedR' addresses limitations in existing software by automating data processing, supporting large-scale analysis, and enabling comparative studies of analysis methods.
 Imports: WRS2, magrittr, graphics, stats, ggplot2, methods, dplyr, tidyr, tidyselect, rlang
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Suggests: 
-    testthat (>= 3.0.0),
+    testthat (>= 3.0.0)
 Config/testthat/edition: 3
