--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: QuICSeedR
 Title: Analyze Data for Fluorophore-Assisted Seed Amplification Assays
-Date: 2024-07-11
+Date: 2024-08-19
 Version: 0.1.0
 Depends: 
     R (>= 4.1.0)
@@ -9,6 +9,7 @@ Authors@R: person(given = "Manci",
                   email = "li000021@umn.edu",
                   role = c("aut", "cre"),
                   comment = c(ORCID = "0000-0003-3930-7117"))
+Copyright: Manci Li
 Description: A toolkit for analysis and visualization of data from fluorophore-assisted seed amplification assays, such as Real-Time Quaking-Induced Conversion (RT-QuIC) and Fluorophore-Assisted Protein Misfolding Cyclic Amplification (PMCA). 'QuICSeedR' addresses limitations in existing software by automating data processing, supporting large-scale analysis, and enabling comparative studies of analysis methods.
 Imports: WRS2, magrittr, graphics, stats, ggplot2, methods, dplyr, tidyr, tidyselect, rlang, readxl
 License: file LICENSE
